--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "url": "https://github.com/segmentio/nightmare.git"
   },
   "dependencies": {
-    "once": "1.3.0",
-    "phantom": "^0.7.0",
+    "async": "^0.9.0",
+    "clone": "~0.1.11",
     "debug": "^0.7.4",
     "defaults": "~1.0.0",
-    "clone": "~0.1.11"
+    "once": "1.3.0",
+    "phantom": "^0.7.0"
   },
   "devDependencies": {
     "should": "~2.1.1",
