added a generic filter that doesn't rely on kimono:

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,6 +3,7 @@
   "unused": "vars",
   "node": true,
   "indent": 2,
+  "evil": true,
   "strict": false,
   "predef": [ "describe", "it", "before", "after", "beforeAll", "afterAll", "window", "document", "alert"]
 }
