--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "debug": "^0.7.4",
     "defaults": "~1.0.0",
     "once": "1.3.0",
-    "phantom": "^0.7.0"
+    "phantom": "^0.7.0",
+    "portfinder": "^0.4.0"
   },
   "devDependencies": {
     "should": "~2.1.1",
