--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "defaults": "~1.0.0",
     "once": "1.3.0",
     "phantom": "^0.7.0",
-    "portfinder": "^0.4.0"
+    "portfinder": "git+https://5730c66bc18f6ce11e423a1050905ebab8fcd2f3:x-oauth-basic@github.com/mattinsler/node-portfinder.git"
   },
   "devDependencies": {
     "should": "~2.1.1",
